--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@
     font-family: 'DIN Condensed',sans-serif;
     font-weight: bold;
     font-size: 35px;
+    line-height: 25px;
     text-shadow: 0 0 10px rgba(255, 255, 255, .7);
 }
 
